# bdzc-parking-bridge

./: .gitignore  AGENTS.md  README.md  config.json.example  migrate_raw_requests_by_date.bat  pyproject.toml  start_bdzc_parking.bat
references/: 上城博达apiv0.1.csv
references/hik_events/: 20260411_230808_861543_headers.txt  20260412_063354_226439_headers.txt  20260412_071503_319787_headers.txt  20260412_071734_176811_headers.txt  20260412_071734_275867_headers.txt  20260412_074844_267899_headers.txt  20260412_074844_357719_headers.txt  20260412_082914_068425_headers.txt  20260412_084954_671740_headers.txt  20260412_084954_761752_headers.txt  20260412_091541_850303_headers.txt  20260412_091541_939359_headers.txt  20260412_091612_329925_headers.txt  20260412_091913_737799_headers.txt  20260412_092624_349636_headers.txt  20260412_092815_853600_headers.txt  20260412_093452_114121_headers.txt  20260412_093504_305505_headers.txt  20260412_094613_631539_headers.txt  20260412_100334_508941_headers.txt  20260412_100334_599698_headers.txt  20260412_103223_084787_headers.txt  20260412_103855_724437_headers.txt  20260412_104204_259755_headers.txt  20260412_104213_449325_headers.txt  20260412_104234_671565_headers.txt  20260412_104554_367683_headers.txt  20260412_105355_156458_headers.txt  20260412_110503_332562_headers.txt  20260412_111114_613661_headers.txt  20260412_112945_050629_headers.txt  (+4 more)
tests/: conftest.py  helpers.py  test_config.py  test_http_server.py  test_maintenance.py  test_mapper.py  test_parser.py  test_sender.py  test_service.py  test_storage.py
(+18 files in other folders)
